--- a/src/components/Login/css/background.css
+++ b/src/components/Login/css/background.css
@@ -1,11 +1,10 @@
 .background {
    background-image: url("../../../img/woman2.jpg");
-   background-repeat: no-repeat;    
-   background-size: 100% 100%;    
+   background-repeat: no-repeat;
+   background-size: 100% auto;
    opacity: 0.8;
    max-width: 100%;
-   height: 700px;
-   
+   font-family: 'Open Sans', sans-serif;
 }
 
 .loginCard {
@@ -14,18 +13,22 @@
     padding: 100px;
 }
 
-button {
+#loginBut {
     background-color: #78b8b3;
-    border-radius: 12px;
+    border-radius: 10px;
     color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 10px;
-    font-family: Helvetica, serif;
+    font-size: 18px;
+    font-family: 'Oswald', sans-serif;
 }
 
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.formContainer {
+    padding-top: 100px;
 }
