--- a/src/components/Login/css/background.css
+++ b/src/components/Login/css/background.css
@@ -7,21 +7,13 @@
    font-family: 'Open Sans', sans-serif;
 }
 
-.card {
+.loginCard {
     vertical-align: middle;
     display: block;
     padding: 100px;
 }
 
-.RegCard {
-    vertical-align: middle;
-    display: block;
-    padding: 50px 100px;
-}
 
-.card {
-    background-color: transparent;
-}
 #loginBut {
     background-color: #78b8b3;
     border-radius: 10px;
@@ -42,6 +34,24 @@ button:hover {
     padding-top: 100px;
 }
 
-#row {
+.RegCard {
+    vertical-align: middle;
+    display: block;
+    padding: 3% 100px 10% 100px;
+}
+
+#row1, #row2, #row3 {
     margin-bottom: 0;
+}
+
+.card h4 {
+    text-align: center;
+}
+
+#formcard {
+    background-color: rgba(255, 255, 255, .5);
+}
+
+#terms {
+    text-align: center;
 }
