--- a/src/components/Main/css/newpost.css
+++ b/src/components/Main/css/newpost.css
@@ -1,8 +1,9 @@
 #card {
+    width: 60%;
     text-align: justify;
     padding: 10px;
     border-radius: 1rem 1rem;
-    width: 100%;
+    margin-bottom: 3%;
 }
 
 .postfooterBy {
@@ -19,6 +20,7 @@
 }
 
 .CardFooter {
+    padding: 20px;
     background-color: rgb(232, 240, 239);
 }
 
@@ -26,11 +28,6 @@
     color: rgb(116, 116, 116);
 }
 
-#CardTitle {
-    text-align: left;
-}
-
 .post {
-    width: 100%;
     margin: 0 auto;
 }
