--- a/src/components/Main/css/newpost.css
+++ b/src/components/Main/css/newpost.css
@@ -1,8 +1,8 @@
 #newCard {
-    width: 60%;
+    width: 100%;
     text-align: justify;
     padding: 10px;
-    border-radius: 1rem 1rem;
+    border-radius: 10px;
     margin-bottom: 3%;
 }
 
@@ -33,4 +33,8 @@
 
 textarea {
     height: auto;
+}
+
+#newPostBtn {
+    float: right;
 }
