lock challenges page

--- a/src/components/Login/css/background.css
+++ b/src/components/Login/css/background.css
@@ -13,6 +13,9 @@
     padding: 100px;
 }
 
+#logcard {
+    background-color: rgba(255, 255, 255, .5);
+}
 
 #loginBut {
     background-color: #78b8b3;
