--- a/src/components/Main/css/Main.css
+++ b/src/components/Main/css/Main.css
@@ -1,5 +1,5 @@
 center {
-    padding-top: 150px;
+    padding-top: 100px;
     width: 97%;
 }
 
@@ -9,6 +9,7 @@ center {
     vertical-align: top;
     border: 1px solid #CED4DA;
     border-radius: 1rem 1rem;
+    margin-top: 50px;
 }
 
 .mainleft {
@@ -21,6 +22,15 @@ center {
 }
 
 .newpostMain {
+    margin: 50px auto;
     width: 80%;
-    margin: 0 auto;
+}
+
+.groupMain {
+    margin-top: 50px;
+    padding-top: 10px;
+}
+
+.img {
+    margin-bottom: 200px;
 }
