--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -4,5 +4,23 @@
     border-radius: 50%;
     margin-right: 10%;
     margin-left: 2%;
+}
 
+.allUsers {
+    padding-top: 150px;
+    text-align: center;
+}
+
+#friendCard {
+    padding: 10%;
+    margin: 5%;
+}
+
+#alluserCard {
+    width: 22%;
+    display: inline-block;
+}
+
+#nameAllUsers {
+    font-weight: bold;
 }
